--- a/index.css
+++ b/index.css
@@ -1,5 +1,116 @@
-html, body {
-    margin: 0;
-    padding: 0;
+:root {
+    --bg-light:#ffffff;
+    
 }
 
+
+/* general styling */
+
+*,*::before,*::after {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    /* margin-block:1rem; */
+    margin: 0rem;
+    background-color: #f5f5f5;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+header,main {
+    width:100%;
+    display: flex;
+    justify-content: center;
+/* background-color: var(--bg-light); */
+}
+
+h1,h2,h3,p {
+    margin-block: 0rem;
+}
+
+/* utitlity classes */
+
+.icon {
+    width:2.3rem;
+}
+
+.post-img {
+    max-width: 37.5rem;
+}
+
+.logo {
+    width:127px;
+}
+
+.avatar {
+    width:34px;
+    border-radius: 100%;
+}
+
+.container {
+    width:100%;
+    max-width:375px; 
+    background-color: var(--bg-light);
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.6rem;
+      min-height: 6.7rem;
+    border-bottom:  0.1rem solid #C6C6C6;
+}
+
+.container__profile {
+    padding:1rem;
+    display: flex;
+    align-items: center;
+}
+
+.container__profile__details {
+    margin-left:0.7rem;
+}
+
+.container__profile__details h1 {
+    font-weight: 700;
+}
+
+.container__profile__details h2 {
+    margin-top:-0.5rem;
+    font-weight: 400;
+}
+
+.actions {
+    padding-top:2.1rem;
+    padding-inline: 1rem;
+    padding-bottom: 1.2rem;
+}
+
+.icon + .icon {
+    margin-left: 0.8rem;
+}
+
+.likes {
+    padding-inline:1rem;
+    padding-top:1rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.3rem;
+}
+
+.comments {
+     padding-inline:1rem;
+    padding-top:1rem;
+    padding-bottom: 1.6rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.3rem;
+}
+
+.comments span {
+    font-weight: 700;
+}
